@@ -1,590 +1,700 @@
-#Requires -Version 5.1
 <#
 .SYNOPSIS
-    Minecraft Cheat Client Forensic Scanner (Zero False-Positive Edition)
+    MagiciansRevealV2 – Console Forensic Scanner (Zero False Positives)
 .DESCRIPTION
-    Professional, self-contained PowerShell forensic scanner that detects known
-    Minecraft cheat clients using ONLY cheat-specific signatures that never appear
-    in legitimate Fabric/Forge mods (AppleSkin, Architectury, Sodium, Lithium, etc.).
-
-    Produces a severity-tiered human-readable report + structured JSON.
-.NOTES
-    Author      : Senior Windows Forensics / Minecraft Cheat RE
-    Version     : 3.1.0
-    Compatibility: Windows 10/11, PowerShell 5.1+
-    No external dependencies. Runs as a single .ps1 file.
+    Menu-driven PowerShell scanner for Minecraft cheat clients.
+    Uses cheat-specific signatures, fullwidth detection, obfuscation, and runtime analysis.
+.AUTHOR
+    Magician
+.VERSION
+    3.0.0
 #>
 
-[CmdletBinding()]
-param(
-    [string]$OutputDir = "$env:TEMP\MCCheatScan_$(Get-Date -Format 'yyyyMMdd_HHmmss')",
-    [switch]$DeepJarScan,          # Full content scan of every .jar (slower)
-    [switch]$SkipDns,              # Skip DNS cache check
-    [switch]$Quiet                 # Minimal console output
-)
+#region Initialisation
+[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+$OutputEncoding = [System.Text.Encoding]::UTF8
+chcp 65001 | Out-Null
+Clear-Host
 
-Set-StrictMode -Version Latest
-$ErrorActionPreference = 'Continue'
-$ProgressPreference = 'SilentlyContinue'
+$Banner = @"
+ ███╗   ███╗ █████╗  ██████╗ ██╗ ██████╗██╗ █████╗ ███╗   ██╗███████╗
+ ████╗ ████║██╔══██╗██╔════╝ ██║██╔════╝██║██╔══██╗████╗  ██║██╔════╝
+ ██╔████╔██║███████║██║  ███╗██║██║     ██║███████║██╔██╗ ██║███████╗
+ ██║╚██╔╝██║██╔══██║██║   ██║██║██║     ██║██╔══██║██║╚██╗██║╚════██║
+ ██║ ╚═╝ ██║██║  ██║╚██████╔╝██║╚██████╗██║██║  ██║██║ ╚████║███████║
+ ╚═╝     ╚═╝╚═╝  ╚═╝ ╚═════╝ ╚═╝ ╚═════╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝╚══════╝
 
-# ---------------------------------------------------------------------------
-# 1. CHEAT-ONLY SIGNATURE DATABASE (never present in legitimate mods)
-# ---------------------------------------------------------------------------
+ ██████╗ ███████╗██╗   ██╗███████╗ █████╗ ██╗     
+ ██╔══██╗██╔════╝██║   ██║██╔════╝██╔══██╗██║     
+ ██████╔╝█████╗  ██║   ██║█████╗  ███████║██║     
+ ██╔══██╗██╔══╝  ╚██╗ ██╔╝██╔══╝  ██╔══██║██║     
+ ██║  ██║███████╗ ╚████╔╝ ███████╗██║  ██║███████╗
+ ╚═╝  ╚═╝╚══════╝  ╚═══╝  ╚══════╝╚═╝  ╚═╝╚══════╝
+"@
 
-$ClientBrandStrings = @(
-    'vape.gg','vapeclient.com','vapeclient','vape-lite','Vape','VapeV4','VapeLite','VapeClient',
-    'meteor-client','meteorclient','meteor.development','Meteor','MeteorClient',
-    'liquidbounce','net.ccbluex','liquidbounce.net','LiquidBounce','LiquidBounceNextGen',
-    'wurst','wurstclient','Wurst','WurstClient',
-    'sigmaclient','sigma client','sigmaclient.com','Sigma','SigmaClient',
-    'salhack','salhack client','Salhack','SalHack',
-    'novoware','novo client','novoware.cc','Novoware','NovoWare',
-    'gamesense','gamesense client','gamesense.pw','GameSense','GameSenseClient',
-    'osiris','osirisclient','osirisclient.com','Osiris','OsirisClient',
-    'cosmos','cosmosclient','cosmosclient.com','Cosmos','CosmosClient',
-    'sorus','sorusclient','sorusclient.net','Sorus','SorusClient',
-    'azura','azuraclient','azuraclient.com','Azura','AzuraClient',
-    'doomsday','doomsdayclient','doomsdayclient.com','Doomsday','DoomsdayClient',
-    'argon','argonclient','argonclient.com','Argon','ArgonClient',
-    'krypton','kryptonclient','kryptonclient.net','Krypton','KryptonClient',
-    'prestige','prestigeclient','prestigeclient.vip','Prestige','PrestigeClient',
-    '198macros','macro198','macros198','198Macros',
-    'delta','deltaclient','deltaclient.net','Delta','DeltaClient',
-    'elysian','elysianclient','elysianclient.org','Elysian','ElysianClient',
-    'onyx','onyxclient','onyxclient.com','Onyx','OnyxClient',
-    'lumina','luminaclient','luminaclient.net','Lumina','LuminaClient',
-    'momentum','momentumclient','momentumclient.com','Momentum','MomentumClient',
-    'ravenbplusplus','ravenb++','ravenbplusplus.net','RavenB++','RavenBPlusPlus',
-    'uzi','uziclient','uziclient.com','UZI','UziClient',
-    'skidbounce','skidbounceclient','skidbounce.net','SkidBounce','SkidBounceClient',
-    'skidcraft','skidcraftclient','Skidcraft','SkidcraftClient',
-    'backdoored','backdooredclient','Backdoored','BackdooredClient',
-    'leuxbackdoor','LeuxBackdoor',
-    'salhackskid','SalHackSkid',
-    'grassware','grasswareclient','GrassWare','GrassWareClient',
-    'allahware','allahwareclient','AllahWare','AllahWareClient',
-    'bbcware','bbcwareclient','BBCWare','BBCWareClient',
-    'arsenic','arsenicclient','Arsenic','ArsenicClient',
-    'atrium','atriumclient','Atrium','AtriumClient',
-    'bleachhack','bleachhack.org','BleachHack','BleachHackClient',
-    'caizm','caizmclient','Caizm','CaizmClient',
-    'coffee','coffeeclient','Coffee','CoffeeClient',
-    'cranberry','cranberryclient','Cranberry','CranberryClient',
-    'evangelion','evangelionclient','Evangelion','EvangelionClient',
-    'fdp','fdpclient','FDP','FDPClient',
-    'fog','fogclient','Fog','FogClient',
-    'forgehax','forgehax.com','ForgeHax','ForgeHaxClient',
-    'huzuni','huzuni.org','Huzuni','HuzuniClient',
-    'hydrogen','hydrogenclient','Hydrogen','HydrogenClient',
-    'ikea','ikeaclient','Ikea','IkeaClient',
-    'jex','jexclient','Jex','JexClient',
-    'kamiblue','kamiblue.org','Kamiblue','KamiblueClient','KAMI','KAMIClient',
-    'konas','konasclient.com','Konas','KonasClient',
-    'kura','kuraclient.net','Kura','KuraClient',
-    'lambda','lambdaclient.com','Lambda','LambdaClient',
-    'lavahack','lavahackclient','LavaHack','LavaHackClient',
-    'mercury','mercuryclient.org','Mercury','MercuryClient',
-    'mint','mintclient','Mint','MintClient',
-    'mirai','miraiclient.net','Mirai','MiraiClient',
-    'nclient','NClient',
-    'neptunium','neptuniumclient','Neptunium','NeptuniumClient',
-    'ozark','ozarkclient.com','Ozark','OzarkClient',
-    'raion','raionclient.net','Raion','RaionClient',
-    'rebirth','rebirthclient','Rebirth','RebirthClient',
-    'rift','riftclient','Rift','RiftClient',
-    'selene','seleneclient','Selene','SeleneClient',
-    'seppuku','seppukuclient.com','Seppuku','SeppukuClient',
-    'silence','silenceclient','Silence','SilenceClient',
-    'spark','sparkclient','Spark','SparkClient',
-    'swift','swiftclient','Swift','SwiftClient',
-    'tensor','tensorclient','Tensor','TensorClient',
-    'tokyo','tokyoclient','Tokyo','TokyoClient',
-    'trollhack','trollhackclient','Trollhack','TrollhackClient',
-    'vertex','vertexclient.net','Vertex','VertexClient',
-    'vrpos','vrposclient','Vrpos','VrposClient',
-    'xulu','xuluclient','Xulu','XuluClient',
-    'zeon','zeonclient','Zeon','ZeonClient',
-    'zerotwo','zerotwoclient','ZeroTwo','ZeroTwoClient',
-    'zodiac','zodiacclient','Zodiac','ZodiacClient',
-    'impact','impactclient','Impact','ImpactClient',
-    'aristois','aristoisclient','Aristois','AristoisClient',
-    'phobos','phobosclient','Phobos','PhobosClient',
-    'rusherhack','rusherhackclient','RusherHack','RusherHackClient',
-    'future','futureclient','Future','FutureClient',
-    'remix','remixclient','Remix','RemixClient',
-    'yasha','yashaclient','Yasha','YashaClient',
-    'zeroday','zerodayclient','ZeroDay','ZeroDayClient',
-    'orchard','orchard client','orchard.gg','Orchard','OrchardClient',
-    'gypsy','gypsyclient','Gypsy','GypsyClient',
-    'xenon','xenonclient','Xenon','XenonClient',
-    'asteria','asteriaclient','Asteria','AsteriaClient',
-    'dqrkis.xyz','dqrkis'
-) | Sort-Object -Unique
+Write-Host $Banner -ForegroundColor Cyan
+Write-Host ""
+Write-Host "                Magicians Reveal V2" -ForegroundColor White
+Write-Host "                Forensic Scanner" -ForegroundColor DarkGray
+Write-Host ""
+Write-Host ("━" * 76) -ForegroundColor DarkCyan
+Write-Host ""
+#endregion
 
-$PackagePaths = @(
-    'cc/novoline','com/alan/clients','club/maxstats','wtf/moonlight',
-    'me/zeroeightsix/kami','net/ccbluex','today/opai','net/minecraft/injection',
-    'org/chainlibs/module/impl/modules','xyz/greaj','com/cheatbreaker',
-    'com/moonsworth','dev/krypton','skid/krypton','dev/gambleclient','dev/virel',
-    'org/jose4j/jwt','sixtwo/','fivefive/'
-)
+#region Helper Functions
+function Test-Admin {
+    (New-Object Security.Principal.WindowsPrincipal([Security.Principal.WindowsIdentity]::GetCurrent())).IsInRole([Security.Principal.WindowsBuiltInRole]::Administrator)
+}
 
-$ExactModules = @(
-    # Combat
-    'KillAura','Killaura','killaura','CrystalAura','crystalaura','AutoCrystal','autocrystal',
-    'MaceAura','maceaura','SilentMace','silentmace','AimAssist','aimassist','SilentAim','silentaim',
-    'BowAimbot','bowaimbot','TriggerBot','triggerbot','AntiWeakness','antiweakness',
-    'FakePunch','fakepunch','DamageTick','damagetick','OnlyCrit','onlycrit',
-    'StaticHitBoxes','statichitboxes','ShieldDisabler','shielddisabler','AntiInvis','antiinvis',
-    'W-Tap','wtap','AutoCrit','autocrit','GodMode','godmode','ReachHack','reachhack',
-    # Crystal / Anchor
-    'CrystalOptimizer','crystaloptimizer','CwCrystal','cwcrystal','DoubleAnchor','doubleanchor',
-    'AnchorExploder','anchorexploder','AutoDtap','autodtap','MarlowAnchor','marlowanchor','AntiAntiCw','antianticw',
-    # Totem
-    'AutoTotem','autototem','TotemOffhand','totemoffhand','HoverTotem','hovertotem',
-    'ForceTotem','forcetotem','AutoRetotem','autoretotem','InventoryTotemLegit','inventorytotemlegit',
-    'AutoDoubleHand','autodoublehand',
-    # Movement
-    'FastBridge','fastbridge','BridgeAssist','bridgeassist','FastSwim','fastswim',
-    'FastPlace','fastplace','NoBreakDelay','nobreakdelay','NoJumpDelay','nojumpdelay',
-    'ElytraSwap','elytraswap','ElytraGlide','elytraglide','Jetpack','jetpack',
-    'AutoSprint','autosprint','InventoryMove','inventorymove','SpeedHack','speedhack',
-    # Utility
-    'AutoClicker','autoclicker','AutoPot','autopot','AutoEat','autoeat','AutoXP','autoxp',
-    'AutoArmor','autoarmor','AutoTool','autotool','AutoMine','automine','ChestStealer','cheststealer',
-    'ShulkerDropper','shulkerdropper','AutoSell','autosell','CordSnapper','cordsnapper',
-    'KeyPearl','keypearl','AutoTpa','autotpa','BedMacro','bedmacro','AutoRestock','autorestock',
-    'ReplaceMod','replacemod','Scaffold','scaffold','Tower','tower',
-    # ESP / Vision
-    'PlayerESP','playeresp','StorageESP','storageesp','EntityESP','entityesp',
-    'XRayHack','xrayhack','HealthIndicators','healthindicators','TargetHUD','targethud',
-    'NetheriteFinder','netheritefinder','RtpBaseFinder','rtpbasefinder','Tracers','tracers',
-    'Chams','chams','GlowESP','glowesp','Radar','radar',
-    # Evasion
-    'FakeLag','fakelag','PingSpoof','pingspoof','PackSpoof','packspoof','StrayBypass','straybypass',
-    'DonutSMPBypass','donutsmpbypass','AntiSSTool','antiss tool','StringCleaner','stringcleaner',
-    'SelfDestruct','selfdestruct','USNJournalCleaner','usnjournalcleaner','DeleteUSNJournal','deleteusnjournal',
-    'GenericSelfdestruct','genericselfdestruct','Disabler','disabler','AntiBan','antiban'
-) | Sort-Object -Unique
+function Write-Header {
+    Clear-Host
+    Write-Host $Banner -ForegroundColor Cyan
+    Write-Host ""
+    Write-Host ("━" * 76) -ForegroundColor DarkCyan
+    Write-Host ""
+}
 
-# Fullwidth / leetspeak obfuscation patterns (cheat-only)
-$FullwidthPatterns = @(
-    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī',
-    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ',
-    '’╝Ī’ĮĢ’Įö’ĮÅ’╝┤’ĮÅ’Įö’Įģ’ĮŹ',
-    '’╝Ī’Įē’ĮŹ’╝Ī’Įō’Įō’Įē’Įō’Įö',
-    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ż’Įī’Įē’Įā’Įŗ’Įģ’ĮÆ',
-    '’╝┤’ĮÆ’Įē’Įć’Įć’Įģ’ĮÆ’╝ó’ĮÅ’Įö',
-    '’╝Ī’ĮĢ’Įö’ĮÅ’╝Ł’Įü’Įā’Įģ',
-    '’╝Ż’ĮÆ’ĮÖ’Įō’Įö’Įü’Įī’╝Ī’ĮĢ’ĮÆ’Įü',
-    '’╝│’Įł’Įē’Įģ’Įī’Įä’╝ż’Įē’Įō’Įü’Įé’Įī’Įģ’ĮÆ',
-    '’╝Ī’ĮÄ’Įā’Įł’ĮÅ’ĮÆ’╝Ī’ĮĢ’ĮÆ’Įü'
-)
-
-$CheatDomains = @(
-    'vape.gg','vapeclient.com','meteorclient.com','liquidbounce.net','wurstclient.net',
-    'sigmaclient.com','novoware.cc','gamesense.pw','osirisclient.com','cosmosclient.com',
-    'sorusclient.net','azuraclient.com','deltaclient.net','elysianclient.org','onyxclient.com',
-    'luminaclient.net','ravenbplusplus.net','uziclient.com','skidbounce.net','bleachhack.org',
-    'forgehax.com','huzuni.org','kamiblue.org','konasclient.com','kuraclient.net',
-    'lambdaclient.com','mercuryclient.org','miraiclient.net','ozarkclient.com','raionclient.net',
-    'seppukuclient.com','vertexclient.net','prestigeclient.vip','dqrkis.xyz','orchard.gg'
-)
-
-$JvmCheatArgs = @(
-    '-Dclient.brand=',
-    '-Dxray','-Dfly','-Dspeed','-Dkillaura','-Dreach','-Dscaffold',
-    '-Dautocrystal','-Dautototem','-Djava.security.manager=',
-    '-Xbootclasspath','-javaagent:'
-)
-
-# ---------------------------------------------------------------------------
-# 2. RESULT CONTAINERS
-# ---------------------------------------------------------------------------
-
-$Findings = [System.Collections.Generic.List[object]]::new()
-$ScanStart = Get-Date
-$ScriptVersion = '3.1.0'
+function Show-Menu {
+    Write-Header
+    Write-Host "1. Scan Minecraft Directory (mods folder)" -ForegroundColor Green
+    Write-Host "2. Scan Full System (Processes, Registry, DNS, JVM)" -ForegroundColor Yellow
+    Write-Host "3. Export Report (JSON + TXT)" -ForegroundColor Magenta
+    Write-Host "4. View Current Findings" -ForegroundColor Cyan
+    Write-Host "5. Clear All Findings" -ForegroundColor Red
+    Write-Host "6. Exit" -ForegroundColor Gray
+    Write-Host ""
+    $choice = Read-Host "Enter choice"
+    return $choice
+}
 
 function Add-Finding {
     param(
-        [ValidateSet('CRITICAL','HIGH','MEDIUM','LOW','INFO')]
-        [string]$Severity,
+        [string]$Tier,    # Detection, Warning, Info
         [string]$Category,
-        [string]$Indicator,
-        [string]$Location,
-        [string]$Evidence,
-        [string]$Confidence = 'Medium',
-        [hashtable]$Extra = @{}
+        [string]$Title,
+        [string]$Message,
+        [hashtable]$Evidence = @{}
     )
-    $Findings.Add([PSCustomObject]@{
-        Timestamp   = (Get-Date).ToString('o')
-        Severity    = $Severity
-        Category    = $Category
-        Indicator   = $Indicator
-        Location    = $Location
-        Evidence    = $Evidence
-        Confidence  = $Confidence
-        Extra       = $Extra
-    })
-}
-
-# ---------------------------------------------------------------------------
-# 3. HELPER FUNCTIONS
-# ---------------------------------------------------------------------------
-
-function Get-MinecraftRoots {
-    $roots = [System.Collections.Generic.List[string]]::new()
-    $candidates = @(
-        "$env:APPDATA\.minecraft",
-        "$env:LOCALAPPDATA\Packages\Microsoft.MinecraftUWP_*\LocalState\games\com.mojang",
-        "$env:USERPROFILE\curseforge\minecraft\Instances",
-        "$env:USERPROFILE\AppData\Roaming\.minecraft",
-        "$env:USERPROFILE\Documents\Curse\Minecraft\Instances",
-        "$env:USERPROFILE\scoop\apps\minecraft\current",
-        "C:\MultiMC\instances",
-        "C:\PrismLauncher\instances",
-        "C:\ATLauncher\instances",
-        "C:\GDLauncher\instances",
-        "$env:USERPROFILE\AppData\Roaming\PrismLauncher\instances",
-        "$env:USERPROFILE\AppData\Roaming\PolyMC\instances",
-        "$env:USERPROFILE\AppData\Roaming\MultiMC\instances"
-    )
-    foreach ($c in $candidates) {
-        if (Test-Path -LiteralPath $c) { $roots.Add((Resolve-Path $c).Path) }
+    $finding = @{
+        Tier      = $Tier
+        Category  = $Category
+        Title     = $Title
+        Message   = $Message
+        Evidence  = $Evidence
+        Timestamp = (Get-Date).ToString("o")
     }
-    # Also discover any folder containing "mods" under common game dirs
-    $searchRoots = @("$env:APPDATA","$env:LOCALAPPDATA","$env:USERPROFILE\Documents","C:\")
-    foreach ($sr in $searchRoots) {
-        if (-not (Test-Path $sr)) { continue }
-        Get-ChildItem -Path $sr -Directory -Filter "mods" -Recurse -Depth 4 -ErrorAction SilentlyContinue |
-            ForEach-Object { $roots.Add($_.Parent.FullName) }
+    $script:Findings += $finding
+    $color = switch ($Tier) {
+        "Detection" { "Red" }
+        "Warning"   { "Yellow" }
+        default     { "Gray" }
     }
-    return $roots | Sort-Object -Unique
+    Write-Host "[$Tier] $Title" -ForegroundColor $color
+    Write-Host "  $Message" -ForegroundColor White
 }
 
-function Test-StringInFile {
-    param([string]$Path, [string[]]$Needles, [switch]$BinarySafe)
+function Export-Report {
+    if ($script:Findings.Count -eq 0) {
+        Write-Host "No findings to export." -ForegroundColor Yellow
+        return
+    }
+    $report = @{
+        ScanTime   = $script:ScanStart.ToString("o")
+        Findings   = $script:Findings
+        Summary    = @{
+            Total      = $script:Findings.Count
+            Detections = ($script:Findings | Where-Object { $_.Tier -eq "Detection" }).Count
+            Warnings   = ($script:Findings | Where-Object { $_.Tier -eq "Warning" }).Count
+            Info       = ($script:Findings | Where-Object { $_.Tier -eq "Info" }).Count
+        }
+    }
+    $json = $report | ConvertTo-Json -Depth 5
+    $jsonFile = "MagiciansRevealV2_report_$(Get-Date -Format 'yyyyMMdd_HHmmss').json"
+    $json | Out-File -FilePath $jsonFile -Encoding utf8
+    Write-Host "JSON report saved to $jsonFile" -ForegroundColor Green
+
+    $txt = "MagiciansRevealV2 Forensic Report`n" + "="*50 + "`n"
+    $txt += "Scan Time: $($report.ScanTime)`n`n"
+    foreach ($f in $script:Findings) {
+        $txt += "[$($f.Tier)] $($f.Title)`n  $($f.Message)`n"
+    }
+    $txtFile = "MagiciansRevealV2_report_$(Get-Date -Format 'yyyyMMdd_HHmmss').txt"
+    $txt | Out-File -FilePath $txtFile -Encoding utf8
+    Write-Host "Text report saved to $txtFile" -ForegroundColor Green
+}
+#endregion
+
+#region Signature Databases
+$suspiciousPatterns = @(
+    "AimAssist", "AnchorTweaks", "AutoAnchor", "AutoCrystal", "AutoDoubleHand", "JDWP.VirtualMachine.AllModules",
+    "AutoHitCrystal", "AutoPot", "AutoTotem", "AutoArmor", "InventoryTotem",
+    "LegitTotem", "PingSpoof", "SelfDestruct",
+    "ShieldBreaker", "TriggerBot", "AxeSpam", "WebMacro",
+    "FastPlace", "WalksyOptimizer", "walsky.optimizer",
+    "WalksyCrystalOptimizerMod", "Donut", "Replace Mod",
+    "ShieldDisabler", "SilentAim", "Totem Hit", "Wtap", "FakeLag", "dev.virel", "orchard",
+    "BlockESP", "dev.krypton", "skid.krypton", "skid/krypton", "AntiMissClick",
+    "LagReach", "PopSwitch", "SprintReset", "ChestSteal", "AntiBot",
+    "ElytraSwap", "FastXP", "FastExp", "Refill", "AirAnchor",
+    "jnativehook", "FakeInv", "HoverTotem", "AutoClicker", "AutoFirework",
+    "PackSpoof", "Antiknockback", "catlean",
+    "AuthBypass", "Asteria", "Prestige", "AutoEat", "AutoMine",
+    "MaceSwap", "Macro198", "StunSlam", "SafeAnchor", "DoubleAnchor", "AutoTPA", "BaseFinder", "Xenon", "gypsy",
+    "AutoPotRefill", "KeyPearl", "AutoNethPot", "AutoDtap",
+    "TriggerBot", "AutoWeb", "AnchorAction",
+    "org.chainlibs.module.impl.modules.Crystal.Y",
+    "org.chainlibs.module.impl.modules.Crystal.bF",
+    "org.chainlibs.module.impl.modules.Crystal.bM",
+    "org.chainlibs.module.impl.modules.Crystal.bY",
+    "org.chainlibs.module.impl.modules.Crystal.bq",
+    "org.chainlibs.module.impl.modules.Crystal.cv",
+    "org.chainlibs.module.impl.modules.Crystal.o",
+    "org.chainlibs.module.impl.modules.Blatant.I",
+    "org.chainlibs.module.impl.modules.Blatant.bR",
+    "org.chainlibs.module.impl.modules.Blatant.bx",
+    "org.chainlibs.module.impl.modules.Blatant.cj",
+    "org.chainlibs.module.impl.modules.Blatant.dk",
+    "imgui.gl3", "imgui.glfw",
+    "BowAim", "Criticals", "Fakenick", "FakeItem",
+    "invsee", "ItemExploit", "Hellion", "hellion",
+    "LicenseCheckMixin", "ClientPlayerInteractionManagerAccessor",
+    "ClientPlayerEntityMixim", "dev.gambleclient", "obfuscatedAuth",
+    "phantom-refmap.json", "xyz.greaj",
+    "じ.class", "ふ.class", "ぶ.class", "ぷ.class", "た.class",
+    "ね.class", "そ.class", "な.class", "ど.class", "ぐ.class",
+    "ず.class", "で.class", "つ.class", "べ.class", "せ.class",
+    "と.class", "み.class", "び.class", "す.class", "の.class"
+)
+
+$cheatStrings = @(
+    "AutoCrystal", "autocrystal", "auto crystal", "cw crystal", "JDWP.VirtualMachine.AllModules",
+    "dontPlaceCrystal", "dontBreakCrystal", "dev.virel", "orchard",
+    "AutoHitCrystal", "autohitcrystal", "canPlaceCrystalServer", "healPotSlot",
+    "ＡｕｔｏＣｒｙｓｔａｌ", "Ａｕｔｏ Ｃｒｙｓｔａｌ",
+    "ＡｕｔｏＨｉｔＣｒｙｓｔａｌ",
+    "AutoAnchor", "autoanchor", "auto anchor", "DoubleAnchor",
+    "HasAnchor", "anchortweaks", "anchor macro", "safe anchor", "safeanchor",
+    "SafeAnchor", "AirAnchor",
+    "ＡｕｔｏＡｎｃｈｏｒ", "Ａｕｔｏ Ａｎｃｈｏｒ",
+    "ＤｏｕｂｌｅＡｎｃｈｏｒ", "Ｄｏｕｂｌｅ Ａｎｃｈｏｒ",
+    "ＳａｆｅＡｎｃｈｏｒ", "Ｓａｆｅ Ａｎｃｈｏｒ",
+    "Ａｎｃｈｏｒ Ｍａｃｒｏ", "anchorMacro",
+    "AutoTotem", "autototem", "auto totem", "InventoryTotem",
+    "inventorytotem", "HoverTotem", "hover totem", "legittotem",
+    "ＡｕｔｏＴｏｔｅｍ", "Ａｕｔｏ Ｔｏｔｅｍ",
+    "ＨｏｖｅｒＴｏｔｅｍ", "Ｈｏｖｅｒ Ｔｏｔｅｍ",
+    "ＩｎｖｅｎｔｏｒｙＴｏｔｅｍ", "Ａｕｔｏ Ｉｎｖｅｎｔｏｒｙ Ｔｏｔｅｍ",
+    "Ａｕｔｏ Ｔｏｔｅｍ Ｈｉｔ",
+    "AutoPot", "autopot", "auto pot", "speedPotSlot", "strengthPotSlot",
+    "AutoArmor", "autoarmor", "auto armor",
+    "ＡｕｔｏＰｏｔ", "Ａｕｔｏ Ｐｏｔ",
+    "Ａｕｔｏ Ｐｏｔ Ｒｅｆｉｌｌ", "AutoPotRefill",
+    "ＡｕｔｏＡｒｍｏｒ", "Ａｕｔｏ Ａｒｍｏｒ",
+    "preventSwordBlockBreaking", "preventSwordBlockAttack",
+    "ShieldDisabler", "ShieldBreaker",
+    "ＳｈｉｅｌｄＤｉｓａｂｌｅｒ", "Ｓｈｉｅｌｄ Ｄｉｓａｂｌｅｒ",
+    "Breaking shield with axe...",
+    "AutoDoubleHand", "autodoublehand", "auto double hand",
+    "ＡｕｔｏＤｏｕｂｌｅＨａｎｄ", "Ａｕｔｏ Ｄｏｕｂｌｅ Ｈａｎｄ",
+    "AutoClicker",
+    "ＡｕｔｏＣｌｉｃｋｅｒ",
+    "Failed to switch to mace after axe!",
+    "AutoMace", "MaceSwap", "SpearSwap",
+    "ＡｕｔｏＭａｃｅ", "Ａｕｔｏ Ｍａｃｅ",
+    "ＭａｃｅＳｗａｐ", "Ｍａｃｅ Ｓｗａｐ",
+    "Ｓｐｅａｒ Ｓｗａｐ", "Ａｕｔｏｍａｔｉｃａｌｌｙ ａｘｅ ａｎｄ ｍａｃｅ ｓｈｉｅｌｄｅｄ ｐｌａｙｅｒｓ",
+    "Ｓｔｕｎ Ｓｌａｍ", "StunSlam",
+    "Donut", "JumpReset", "axespam", "axe spam",
+    "findKnockbackSword", "attackRegisteredThisClick",
+    "AimAssist", "aimassist", "aim assist",
+    "triggerbot", "trigger bot",
+    "ＡｉｍＡｓｓｉｓｔ", "Ａｉｍ Ａｓｓｉｓｔ",
+    "ＴｒｉｇｇｅｒＢｏｔ", "Ｔｒｉｇｇｅｒ Ｂｏｔ",
+    "Silent Rotations", "SilentRotations",
+    "Ｓｉｌｅｎｔ Ｒｏｔａｔｉｏｎｓ",
+    "FakeInv", "swapBackToOriginalSlot",
+    "FakeLag", "pingspoof", "ping spoof",
+    "ＦａｋｅＬａｇ", "Ｆａｋｅ Ｌａｇ",
+    "fakePunch", "Fake Punch",
+    "Ｆａｋｅ Ｐｕｎｃｈ",
+    "mace_swap", "quick_strike", "macro_198", "stun_slam",
+    "safe_anchor", "double_anchor", "auto_pot_refill",
+    "walksy_optimizer", "key_pearl", "aim_assist",
+    "auto_neth_pot", "auto_dtap", "trigger_bot", "auto_web",
+    "DOUBLE_ESCAPE", "DOUBLE_RIGHTCLICK_FIRST", "DOUBLE_RIGHTCLICK_SECOND",
+    "POST_CYCLE_DELAY", "PLACE_OBI", "WAIT_OBI", "PLACE_CRYSTAL", "BREAK_CRYSTAL",
+    "ROTATING_DOWN", "ROTATING_BACK", "REFILLING", "PLANTING", "BONEMEALING",
+    "AnchorAction", "Places two anchors for massive damage",
+    "REOFFHAND_TOTEM",
+    "webmacro", "web macro",
+    "AntiWeb", "AutoWeb",
+    "Ａｎｔｉ Ｗｅｂ", "ＡｕｔｏＷｅｂ",
+    "Ｐｌａｃｅｓ Ｗｅｂｓ Ｏｎ Ｅｎｅｍｉｅｓ",
+    "lvstrng", "dqrkis", "selfdestruct", "self destruct",
+    "WalksyCrystalOptimizerMod", "WalksyOptimizer", "WalskyOptimizer",
+    "Ｗａｌｋｓｙ Ｏｐｔｉｍｉｚｅｒ",
+    "autoCrystalPlaceClock",
+    "AutoFirework", "ElytraSwap", "FastXP", "FastExp", "NoJumpDelay",
+    "ＥｌｙｔｒａＳｗａｐ", "Ｅｌｙｔｒａ Ｓｗａｐ",
+    "PackSpoof", "Antiknockback", "catlean",
+    "AuthBypass", "obfuscatedAuth", "LicenseCheckMixin",
+    "BaseFinder", "invsee", "ItemExploit",
+    "FreezePlayer",
+    "Ｆｒｅｅｃａｍ", "Ｍｏｖｅ ｆｒｅｅｌｙ ｔｈｒｏｕｇｈ ｗａｌｌｓ",
+    "Ｎｏ Ｃｌｉｐ", "Ｆｒｅｅｚｅ Ｐｌａｙｅｒ",
+    "LWFH Crystal", "JDWP.VirtualMachine.AllModules",
+    "ＬＷＦＨ Ｃｒｙｓｔａｌ",
+    "KeyPearl", "LootYeeter",
+    "ＫｅｙＰｅａｒｌ", "Ｋｅｙ Ｐｅａｒｌ",
+    "Ｌｏｏｔ Ｙｅｅｔｅｒ",
+    "FastPlace",
+    "Ｆａｓｔ Ｐｌａｃｅ", "Ｐｌａｃｅ ｂｌｏｃｋｓ ｆａｓｔｅｒ",
+    "AutoBreach",
+    "Ａｕｔｏ Ｂｒｅａｃｈ",
+    "setBlockBreakingCooldown", "getBlockBreakingCooldown", "blockBreakingCooldown",
+    "onBlockBreaking", "setItemUseCooldown",
+    "invokeDoAttack", "invokeDoItemUse", "invokeOnMouseButton",
+    "onPushOutOfBlocks", "onIsGlowing",
+    "Automatically switches to sword when hitting with totem",
+    "arrayOfString", "POT_CHEATS",
+    "Dqrkis Client", "Entity.isGlowing",
+    "Activate Key", "Ａｃｔｉｖａｔｅ Ｋｅｙ",
+    "Click Simulation", "Ｃｌｉｃｋ Ｓｉｍｕｌａｔｉｏｎ",
+    "On RMB", "Ｏｎ ＲＭＢ",
+    "No Count Glitch", "Ｎｏ Ｃｏｕｎｔ Ｇｌｉｔｃｈ",
+    "No Bounce", "NoBounce", "Ｎｏ Ｂｏｕｎｃｅ", "ＮｏＢｏｕｎｃｅ",
+    "Ｒｅｍｏｖｅｓ ｔｈｅ ｃｒｙｓｔａｌ ｂｏｕｎｃｅ ａｎｉｍａｔｉｏｎ",
+    "Place Delay", "Ｐｌａｃｅ Ｄｅｌａｙ",
+    "Break Delay", "Ｂｒｅａｋ Ｄｅｌａｙ",
+    "Ｆａｓｔ Ｍｏｄｅ",
+    "Place Chance", "Ｐｌａｃｅ Ｃｈａｎｃｅ",
+    "Break Chance", "Ｂｒｅａｋ Ｃｈａｎｃｅ",
+    "Stop On Kill", "Ｓｔｏｐ Ｏｎ Ｋｉｌｌ",
+    "Ｄａｍａｇｅ Ｔｉｃｋ", "damagetick",
+    "Anti Weakness", "Ａｎｔｉ Ｗｅａｋｎｅｓｓ",
+    "Particle Chance", "Ｐａｒｔｉｃｌｅ Ｃｈａｎｃｅ",
+    "Trigger Key", "Ｔｒｉｇｇｅｒ Ｋｅｙ",
+    "Switch Delay", "Ｓｗｉｔｃｈ Ｄｅｌａｙ",
+    "Totem Slot", "Ｔｏｔｅｍ Ｓｌｏｔ",
+    "Silent Rotations", "Ｓｉｌｅｎｔ Ｒｏｔａｔｉｏｎｓ",
+    "Smooth Rotations", "Ｓｍｏｏｔｈ Ｒｏｔａｔｉｏｎｓ",
+    "Rotation Speed", "Ｒｏｔａｔｉｏｎ Ｓｐｅｅｄ",
+    "Use Easing", "Ｕｓｅ Ｅａｓｉｎｇ",
+    "Easing Strength", "Ｅａｓｉｎｇ Ｓｔｒｅｎｇｔｈ",
+    "While Use", "Ｗｈｉｌｅ Ｕｓｅ",
+    "Stop on Kill", "Ｓｔｏｐ ｏｎ Ｋｉｌｌ",
+    "Click Simulation", "Ｃｌｉｃｋ Ｓｉｍｕｌａｔｉｏｎ",
+    "Glowstone Delay", "Ｇｌｏｗｓｔｏｎｅ Ｄｅｌａｙ",
+    "Glowstone Chance", "Ｇｌｏｗｓｔｏｎｅ Ｃｈａｎｃｅ",
+    "Explode Delay", "Ｅｘｐｌｏｄｅ Ｄｅｌａｙ",
+    "Explode Chance", "Ｅｘｐｌｏｄｅ Ｃｈａｎｃｅ",
+    "Explode Slot", "Ｅｘｐｌｏｄｅ Ｓｌｏｔ",
+    "Only Charge", "Ｏｎｌｙ Ｃｈａｒｇｅ",
+    "Anchor Macro", "Ａｎｃｈｏｒ Ｍａｃｒｏ",
+    "Reach Distance", "Ｒｅａｃｈ Ｄｉｓｔａｎｃｅ",
+    "Min Height", "Ｍｉｎ Ｈｅｉｇｈｔ",
+    "Min Fall Speed", "Ｍｉｎ Ｆａｌｌ Ｓｐｅｅｄ",
+    "Attack Delay", "Ａｔｔａｃｋ Ｄｅｌａｙ",
+    "Breach Delay", "Ｂｒｅａｃｈ Ｄｅｌａｙ",
+    "Require Elytra", "Ｒｅｑｕｉｒｅ Ｅｌｙｔｒａ",
+    "Auto Switch Back", "Ａｕｔｏ Ｓｗｉｔｃｈ Ｂａｃｋ",
+    "Check Line of Sight", "Ｃｈｅｃｋ Ｌｉｎｅ ｏｆ Ｓｉｇｈｔ",
+    "Only When Falling", "Ｏｎｌｙ Ｗｈｅｎ Ｆａｌｌｉｎｇ",
+    "Require Crit", "Ｒｅｑｕｉｒｅ Ｃｒｉｔ",
+    "Show Status Display", "Ｓｈｏｗ Ｓｔａｔｕｓ Ｄｉｓｐｌａｙ",
+    "Stop On Crystal", "Ｓｔｏｐ Ｏｎ Ｃｒｙｓｔａｌ",
+    "Check Shield", "Ｃｈｅｃｋ Ｓｈｉｅｌｄ",
+    "On Pop", "Ｏｎ Ｐｏｐ",
+    "Predict Damage", "Ｐｒｅｄｉｃｔ Ｄａｍａｇｅ",
+    "On Ground", "Ｏｎ Ｇｒｏｕｎｄ",
+    "Check Players", "Ｃｈｅｃｋ Ｐｌａｙｅｒｓ",
+    "Predict Crystals", "Ｐｒｅｄｉｃｔ Ｃｒｙｓｔａｌｓ",
+    "Check Aim", "Ｃｈｅｃｋ Ａｉｍ",
+    "Check Items", "Ｃｈｅｃｋ Ｉｔｅｍｓ",
+    "Activates Above", "Ａｃｔｉｖａｔｅｓ Ａｂｏｖｅ",
+    "Blatant", "Ｂｌａｔａｎｔ",
+    "Force Totem", "Ｆｏｒｃｅ Ｔｏｔｅｍ",
+    "Stay Open For", "Ｓｔａｙ Ｏｐｅｎ Ｆｏｒ",
+    "Auto Inventory Totem", "Ａｕｔｏ Ｉｎｖｅｎｔｏｒｙ Ｔｏｔｅｍ",
+    "Only On Pop", "Ｏｎｌｙ Ｏｎ Ｐｏｐ",
+    "Vertical Speed", "Ｖｅｒｔｉｃａｌ Ｓｐｅｅｄ",
+    "Hover Totem", "Ｈｏｖｅｒ Ｔｏｔｅｍ",
+    "Swap Speed", "Ｓｗａｐ Ｓｐｅｅｄ",
+    "Strict One-Tick", "Ｓｔｒｉｃｔ Ｏｎｅ－Ｔｉｃｋ",
+    "Mace Priority", "Ｍａｃｅ Ｐｒｉｏｒｉｔｙ",
+    "Min Totems", "Ｍｉｎ Ｔｏｔｅｍｓ",
+    "Min Pearls", "Ｍｉｎ Ｐｅａｒｌｓ",
+    "Totem First", "Ｔｏｔｅｍ Ｆｉｒｓｔ",
+    "Drop Interval", "Ｄｒｏｐ Ｉｎｔｅｒｖａｌ",
+    "Random Pattern", "Ｒａｎｄｏｍ Ｐａｔｔｅｒｎ",
+    "Loot Yeeter", "Ｌｏｏｔ Ｙｅｅｔｅｒ",
+    "Horizontal Aim Speed", "Ｈｏｒｉｚｏｎｔａｌ Ａｉｍ Ｓｐｅｅｄ",
+    "Vertical Aim Speed", "Ｖｅｒｔｉｃａｌ Ａｉｍ Ｓｐｅｅｄ",
+    "Include Head", "Ｉｎｃｌｕｄｅ Ｈｅａｄ",
+    "Web Delay", "Ｗｅｂ Ｄｅｌａｙ",
+    "Holding Web", "Ｈｏｌｄｉｎｇ Ｗｅｂ",
+    "Not When Affects Player", "Ｎｏｔ Ｗｈｅｎ Ａｆｆｅｃｔｓ Ｐｌａｙｅｒ",
+    "Hit Delay", "Ｈｉｔ Ｄｅｌａｙ",
+    "Ｓｗｉｔｃｈ Ｂａｃｋ",
+    "Require Hold Axe", "Ｒｅｑｕｉｒｅ Ｈｏｌｄ Ａｘｅ",
+    "Fake Punch", "Ｆａｋｅ Ｐｕｎｃｈ",
+    "placeInterval", "breakInterval", "stopOnKill",
+    "activateOnRightClick", "holdCrystal",
+    "ｐｌａｃｅＩｎｔｅｒｖａｌ", "ｂｒｅａｋＩｎｔｅｒｖａｌ",
+    "ｓｔｏｐＯｎＫｉｌｌ", "ａｃｔｉｖａｔｅOｎＲｉｇｈｔＣｌｉｃｋ",
+    "ｄａｍａｇｅｔｉｃｋ", "ｈｏｌｄＣｒｙｓｔａｌ",
+    "ｆａｋｅＰｕｎｃｈ",
+    "Ｒｅｆｉｌｌｓ ｙｏｕｒ ｈｏｔｂａｒ ｗｉｔｈ ｐｏｔｉｏｎｓ",
+    "Ｋｅｐｓ ｙｏｕ ｓｐｒｉｎｔｉｎｇ ａｔ ａｌｌ ｔｉｍｅｓ",
+    "Ｐｌａｃｅｓ ａｎｃｈｏｒ， ｃｈａｒｇｅｓ ｉｔ， ｐｒｏｔｅｃｔｓ ｙｏｕ， ａｎｄ ｅｘｐｌｏｄｅｓ",
+    "Ａｕｔｏ ｓｗａｐ ｔｏ ｓｐｅａｒ ｏｎ ａｔｔａｃｋ",
+    "Macro Key", "Ａｕｔｏ Ｐｏｔ", "Ｍａｃｒｏ Ｋｅｙ",
+    "KillAura", "ClickAura", "MultiAura", "ForceField", "LegitAura",
+    "AimBot", "AutoAim", "SilentAim", "AimLock", "HeadSnap",
+    "CrystalAura",
+    "AnchorAura", "AnchorFill", "AnchorPlace",
+    "BedAura", "AutoBed", "BedBomb", "BedPlace",
+    "BowAimbot", "BowSpam", "AutoBow",
+    "AutoCrit", "CritBypass", "AlwaysCrit", "CriticalHit",
+    "ReachHack", "ExtendReach", "LongReach", "HitboxExpand",
+    "AntiKB", "NoKnockback", "GrimVelocity", "GrimDisabler", "VelocitySpoof", "KBReduce",
+    "OffhandTotem", "TotemSwitch",
+    "AutoWeapon", "AutoSword", "AutoCity", "Burrow", "SelfTrap",
+    "HoleFiller", "AntiSurround", "AntiBurrow",
+    "WTap", "TargetStrafe", "AutoGap", "AutoPearl",
+    "FlyHack", "CreativeFlight", "BoatFly", "PacketFly", "AirJump",
+    "SpeedHack", "BHop", "BunnyHop",
+    "AntiFall", "NoFallDamage", "SafeFall",
+    "StepHack", "FastClimb", "AutoStep", "HighStep",
+    "WaterWalk", "LiquidWalk", "LavaWalk",
+    "NoSlow", "NoSlowdown", "NoWeb", "NoSoulSand",
+    "WallHack",
+    "ElytraSpeed", "InstantElytra",
+    "ScaffoldWalk", "FastBridge", "BuildHelper", "AutoBridge",
+    "Nuker", "NukerLegit", "InstantBreak",
+    "GhostHand", "NoSwing",
+    "PlaceAssist", "AirPlace", "AutoPlace", "InstantPlace",
+    "PlayerESP", "MobESP", "ItemESP", "StorageESP", "ChestESP",
+    "Tracers", "NameTagsHack",
+    "XRayHack", "OreFinder", "CaveFinder", "OreESP",
+    "NewChunks", "ChunkBorders", "TunnelFinder",
+    "TargetHUD", "ReachDisplay",
+    "DoubleClicker", "JitterClick", "ButterflyClick", "CPSBoost",
+    "ChestStealer", "InvManager", "InvMovebypass",
+    "AutoSprint", "AntiAFK", "AutoRespawn",
+    "PopSwitch",
+    "FakeLatency", "FakePing", "SpoofRotation", "PositionSpoof",
+    "GameSpeed", "SpeedTimer",
+    "GrimBypass", "VulcanBypass", "MatrixBypass",
+    "AACBypass", "VerusDisabler", "IntaveBypass", "WatchdogBypass",
+    "PacketMine", "PacketWalk", "PacketSneak", "PacketCancel", "PacketDupe", "PacketSpam",
+    "SelfDestruct", "HideClient",
+    "SessionStealer", "TokenLogger", "TokenGrabber", "DiscordToken",
+    "RemoteAccess", "ReverseShell", "C2Server", "Backdoor", "KeyLogger",
+    "StashFinder", "TrailFinder",
+    "imgui.binding",
+    "JNativeHook", "GlobalScreen", "NativeKeyListener",
+    "client-refmap.json", "cheat-refmap.json",
+    "aHR0cDovL2FwaS5ub3ZhY2xpZW50LmxvbC93ZWJob29rLnR4dA==",
+    "meteordevelopment", "cc/novoline",
+    "com/alan/clients", "club/maxstats", "wtf/moonlight",
+    "me/zeroeightsix/kami", "net/ccbluex", "today/opai",
+    "net/minecraft/injection", "org/chainlibs/module/impl/modules",
+    "xyz/greaj", "com/cheatbreaker", "com/moonsworth",
+    "doomsdayclient", "DoomsdayClient", "doomsday.jar",
+    "novaclient", "api.novaclient.lol",
+    "WalksyOptimizer", "LWFH Crystal",
+    "vape.gg", "vapeclient", "VapeClient", "VapeLite",
+    "intent.store", "IntentClient",
+    "rise.today", "riseclient.com",
+    "meteor-client", "meteorclient", "meteordevelopment.meteorclient",
+    "liquidbounce", "fdp-client", "net.ccbluex",
+    "novoware", "novoclient",
+    "aristois", "impactclient", "azura",
+    "pandaware", "skilled", "moonClient", "astolfo",
+    "futureClient", "konas", "rusherhack", "inertia", "exhibition",
+    "dev.krypton", "dev/krypton", "skid.krypton", "skid/krypton",
+    "VirginClient", "virgin client",
+    "catlean", "CatleanClient", "catlean client",
+    "ArgonClient", "argon client",
+    "Asteria", "AsteriaClient", "asteria client",
+    "Prestige", "PrestigeClient", "prestige client", "prestigeclient.vip",
+    "gypsy", "GypsyClient", "gypsy client",
+    "Xenon", "XenonClient", "xenon client",
+    "GrimClient", "grim client",
+    "phantom-refmap.json",
+    "dqrkis.xyz", "Dqrkis Client"
+)
+
+$patternRegex = [regex]::new(
+    '(?<![A-Za-z])(' + ($suspiciousPatterns -join '|') + ')(?![A-Za-z])',
+    [System.Text.RegularExpressions.RegexOptions]::Compiled
+)
+$cheatStringSet = [System.Collections.Generic.HashSet[string]]::new([System.StringComparer]::Ordinal)
+foreach ($s in $cheatStrings) { [void]$cheatStringSet.Add($s) }
+
+$fullwidthRegex = [regex]::new(
+    "[\uFF21-\uFF3A\uFF41-\uFF5A\uFF10-\uFF19]{2,}",
+    [System.Text.RegularExpressions.RegexOptions]::Compiled
+)
+#endregion
+
+#region JAR Analysis Functions
+function Get-FileContentAsString {
+    param([string]$Path)
     try {
-        if ($BinarySafe) {
-            $bytes = [System.IO.File]::ReadAllBytes($Path)
-            $text  = [System.Text.Encoding]::UTF8.GetString($bytes)
-        } else {
-            $text = Get-Content -LiteralPath $Path -Raw -ErrorAction Stop
-        }
-        foreach ($n in $Needles) {
-            if ($text -like "*$n*") { return $true }
-        }
-    } catch {}
-    return $false
+        $bytes = [System.IO.File]::ReadAllBytes($Path)
+        $text = [System.Text.Encoding]::UTF8.GetString($bytes)
+        if ($text -match "\0") { $text = [System.Text.Encoding]::Unicode.GetString($bytes) }
+        return $text
+    } catch { return $null }
 }
 
-function Search-JarForSignatures {
-    param([string]$JarPath)
-    $hits = [System.Collections.Generic.List[string]]::new()
+function Scan-JAR {
+    param([string]$FilePath)
+    $foundPatterns  = [System.Collections.Generic.HashSet[string]]::new()
+    $foundStrings   = [System.Collections.Generic.HashSet[string]]::new()
+    $foundFullwidth = [System.Collections.Generic.HashSet[string]]::new()
+
+    Add-Type -AssemblyName System.IO.Compression.FileSystem -ErrorAction SilentlyContinue
     try {
-        Add-Type -AssemblyName System.IO.Compression.FileSystem -ErrorAction SilentlyContinue
-        $zip = [System.IO.Compression.ZipFile]::OpenRead($JarPath)
-        foreach ($entry in $zip.Entries) {
-            $name = $entry.FullName.Replace('\','/')
-            # Package path hits
-            foreach ($pp in $PackagePaths) {
-                if ($name -like "*$pp*") {
-                    $hits.Add("PACKAGE:$pp in $name")
-                }
+        $archive = [System.IO.Compression.ZipFile]::OpenRead($FilePath)
+        $allEntries = @($archive.Entries)
+        foreach ($entry in $allEntries) {
+            $name = $entry.FullName
+            foreach ($m in $patternRegex.Matches($name)) {
+                [void]$foundPatterns.Add($m.Value)
             }
-            # Only deep-scan class / json / txt / properties when requested or size is reasonable
-            if ($DeepJarScan -or $entry.Length -lt 2MB) {
-                if ($entry.Name -match '\.(class|json|txt|properties|cfg|yml|yaml|toml)$') {
+            if ($name -match '\.(class|json)$' -or $name -match 'MANIFEST\.MF') {
+                try {
                     $stream = $entry.Open()
-                    $reader = New-Object System.IO.StreamReader($stream)
-                    $content = $reader.ReadToEnd()
-                    $reader.Close(); $stream.Close()
+                    $ms = New-Object System.IO.MemoryStream
+                    $stream.CopyTo($ms); $stream.Close()
+                    $bytes = $ms.ToArray(); $ms.Dispose()
+                    $ascii = [System.Text.Encoding]::ASCII.GetString($bytes)
+                    $utf8  = [System.Text.Encoding]::UTF8.GetString($bytes)
+                    foreach ($m in $patternRegex.Matches($ascii)) { [void]$foundPatterns.Add($m.Value) }
+                    foreach ($s in $cheatStringSet) {
+                        if ($ascii.Contains($s)) { [void]$foundStrings.Add($s); continue }
+                        if ($utf8.Contains($s))  { [void]$foundStrings.Add($s) }
+                    }
+                    foreach ($m in $fullwidthRegex.Matches($utf8)) {
+                        [void]$foundFullwidth.Add($m.Value)
+                    }
+                } catch {}
+            }
+        }
+        $archive.Dispose()
+    } catch { return $null }
 
-                    foreach ($brand in $ClientBrandStrings) {
-                        if ($content -match [regex]::Escape($brand)) {
-                            $hits.Add("BRAND:$brand")
+    # Resolve fullwidth to known cheat strings
+    $fwCheatPool = $cheatStrings | Where-Object { $_ -cmatch "[\uFF21-\uFF3A\uFF41-\uFF5A\uFF10-\uFF19]" }
+    $resolvedFullwidth = [System.Collections.Generic.HashSet[string]]::new()
+    foreach ($fw in @($foundFullwidth)) {
+        if ($fw.Length -lt 3) { continue }
+        $bestMatch = $null
+        foreach ($cs in $fwCheatPool) {
+            if ($cs.Contains($fw)) {
+                if ($null -eq $bestMatch -or $cs.Length -lt $bestMatch.Length) { $bestMatch = $cs }
+            }
+        }
+        if ($bestMatch) { [void]$resolvedFullwidth.Add($bestMatch) }
+        elseif ($fw.Length -ge 6) { [void]$resolvedFullwidth.Add($fw) }
+    }
+    $finalFullwidth = [System.Collections.Generic.HashSet[string]]::new()
+    foreach ($fw in @($resolvedFullwidth)) {
+        $isRedundant = $false
+        foreach ($other in @($resolvedFullwidth)) {
+            if ($fw.Length -lt $other.Length -and $other.Contains($fw)) { $isRedundant = $true; break }
+        }
+        if (-not $isRedundant) { [void]$finalFullwidth.Add($fw) }
+    }
+    return @{ Patterns = $foundPatterns; Strings = $foundStrings; Fullwidth = $finalFullwidth }
+}
+#endregion
+
+#region System Scan Modules
+function Scan-System {
+    Write-Host "Scanning system (processes, registry, DNS, JVM)..." -ForegroundColor Green
+    # Processes
+    $procs = Get-Process -ErrorAction SilentlyContinue
+    foreach ($p in $procs) {
+        $name = $p.ProcessName.ToLower()
+        foreach ($client in $cheatStrings) {
+            if ($name -match $client.ToLower()) {
+                Add-Finding -Tier "Detection" -Category "Processes" -Title "Cheat Process Running" -Message "Process $($p.ProcessName) matches '$client'" -Evidence @{Process=$p.ProcessName; Client=$client}
+                break
+            }
+        }
+        if ($p.ProcessName -match "javaw|java") {
+            try {
+                $cmd = (Get-CimInstance -ClassName Win32_Process -Filter "ProcessId = $($p.Id)" -ErrorAction SilentlyContinue).CommandLine
+                if ($cmd) {
+                    if ($cmd -match "-Dclient\.brand=(Wurst|Impact|Meteor|Sigma|LiquidBounce|Vape|Novoline)") {
+                        Add-Finding -Tier "Detection" -Category "JVM" -Title "Malicious JVM Argument" -Message "JVM brand: $($Matches[0])" -Evidence @{Argument=$Matches[0]}
+                    }
+                    if ($cmd -match "-D(xray|fly|speed|killaura|reach|scaffold|autocrystal|autototem)") {
+                        Add-Finding -Tier "Detection" -Category "JVM" -Title "JVM Cheat Flag" -Message "Flag: $($Matches[0])" -Evidence @{Argument=$Matches[0]}
+                    }
+                    # Agents
+                    $agentMatches = [regex]::Matches($cmd, '-javaagent:([^\s"]+)')
+                    $legitAgents = @("jmxremote","yjp","jrebel","newrelic","jacoco","theseus")
+                    foreach ($am in $agentMatches) {
+                        $agentPath = $am.Groups[1].Value.Trim('"').Trim("'")
+                        $agentName = [System.IO.Path]::GetFileName($agentPath)
+                        $isLegit = $false
+                        foreach ($la in $legitAgents) { if ($agentName -match $la) { $isLegit = $true; break } }
+                        if (-not $isLegit) {
+                            Add-Finding -Tier "Warning" -Category "JVM" -Title "Suspicious Java Agent" -Message "Agent: $agentName (path: $agentPath)" -Evidence @{Agent=$agentName; Path=$agentPath}
                         }
                     }
-                    foreach ($mod in $ExactModules) {
-                        if ($content -match [regex]::Escape($mod)) {
-                            $hits.Add("MODULE:$mod")
+                    if ($cmd -match '-Xbootclasspath') {
+                        Add-Finding -Tier "Warning" -Category "JVM" -Title "Bootclasspath Modification" -Message "Xbootclasspath flag detected" -Evidence @{Flag=$Matches[0]}
+                    }
+                }
+            } catch {}
+        }
+    }
+    # Registry
+    foreach ($client in $cheatStrings) {
+        $path = "HKCU:\Software\$client"
+        if (Test-Path $path) {
+            Add-Finding -Tier "Detection" -Category "Registry" -Title "Cheat Registry Key" -Message "Key $path exists" -Evidence @{Key=$path}
+        }
+    }
+    # DNS cache
+    $dns = ipconfig /displaydns 2>$null | Select-String "Record Name.*:\s+(.*)" | ForEach-Object { $_.Matches.Groups[1].Value }
+    $cheatDomains = @(
+        "vape.gg","vapeclient.com","meteorclient.com","liquidbounce.net","wurstclient.net",
+        "sigmaclient.com","novoware.cc","gamesense.pw","osirisclient.com","cosmosclient.com",
+        "sorusclient.net","azuraclient.com","deltaclient.net","elysianclient.org",
+        "onyxclient.com","luminaclient.net","ravenbplusplus.net","uziclient.com",
+        "skidbounce.net","bleachhack.org","forgehax.com","huzuni.org","kamiblue.org",
+        "konasclient.com","kuraclient.net","lambdaclient.com","mercuryclient.org",
+        "miraiclient.net","ozarkclient.com","raionclient.net","seppukuclient.com",
+        "vertexclient.net","prestigeclient.vip","dqrkis.xyz","orchard.gg"
+    )
+    foreach ($domain in $cheatDomains) {
+        if ($dns -match $domain) {
+            Add-Finding -Tier "Detection" -Category "DNS" -Title "Cheat Domain in Cache" -Message "Domain $domain resolved" -Evidence @{Domain=$domain}
+        }
+    }
+    # Prefetch
+    $prefetchDir = "$env:windir\Prefetch"
+    if (-not (Test-Path $prefetchDir)) {
+        Add-Finding -Tier "Detection" -Category "Prefetch" -Title "Prefetch Folder Missing" -Message "Prefetch folder not present"
+    } else {
+        $files = Get-ChildItem $prefetchDir -ErrorAction SilentlyContinue
+        if ($files.Count -lt 5) {
+            Add-Finding -Tier "Warning" -Category "Prefetch" -Title "Low Prefetch Count" -Message "Only $($files.Count) prefetch files – possible deletion"
+        }
+    }
+    # Event logs
+    $logs = @("Application", "System", "Security", "Windows PowerShell")
+    foreach ($log in $logs) {
+        try {
+            $events = Get-WinEvent -LogName $log -MaxEvents 1 -ErrorAction SilentlyContinue
+            if (-not $events) {
+                Add-Finding -Tier "Warning" -Category "Event Logs" -Title "Event Log Cleared" -Message "Event log $log appears empty (cleared?)" -Evidence @{Log=$log}
+            }
+        } catch {}
+    }
+    Write-Host "System scan complete." -ForegroundColor Green
+}
+#endregion
+
+#region Main Menu Loop
+if (-not (Test-Admin)) {
+    Write-Host "WARNING: Not running as Administrator – some checks may fail." -ForegroundColor Red
+    Read-Host "Press Enter to continue"
+}
+
+$script:Findings = @()
+$script:ScanStart = Get-Date
+$script:minecraftPath = ""
+
+do {
+    $choice = Show-Menu
+    switch ($choice) {
+        "1" {
+            $path = Read-Host "Enter Minecraft mods folder path (or press Enter for default)"
+            if ([string]::IsNullOrWhiteSpace($path)) {
+                $path = "$env:USERPROFILE\AppData\Roaming\.minecraft\mods"
+            }
+            if (Test-Path $path -PathType Container) {
+                $script:minecraftPath = $path
+                Write-Host "Scanning JARs in $path ..." -ForegroundColor Green
+                $jars = Get-ChildItem -Path $path -Filter *.jar -ErrorAction SilentlyContinue
+                if ($jars.Count -eq 0) {
+                    Write-Host "No JAR files found." -ForegroundColor Yellow
+                } else {
+                    $total = $jars.Count
+                    $i = 0
+                    foreach ($jar in $jars) {
+                        $i++
+                        Write-Progress -Activity "Scanning JARs" -Status "$($jar.Name)" -PercentComplete (($i / $total) * 100)
+                        $result = Scan-JAR -FilePath $jar.FullName
+                        if ($result) {
+                            $hasHit = ($result.Patterns.Count -gt 0) -or ($result.Strings.Count -gt 0) -or ($result.Fullwidth.Count -gt 0)
+                            if ($hasHit) {
+                                foreach ($p in $result.Patterns) {
+                                    Add-Finding -Tier "Detection" -Category "File System" -Title "Pattern Match" -Message "Pattern '$p' in $($jar.Name)" -Evidence @{File=$jar.Name; Pattern=$p}
+                                }
+                                foreach ($s in $result.Strings) {
+                                    Add-Finding -Tier "Warning" -Category "File System" -Title "String Match" -Message "String '$s' in $($jar.Name)" -Evidence @{File=$jar.Name; String=$s}
+                                }
+                                foreach ($fw in $result.Fullwidth) {
+                                    Add-Finding -Tier "Detection" -Category "File System" -Title "Fullwidth Obfuscation" -Message "Fullwidth '$fw' in $($jar.Name)" -Evidence @{File=$jar.Name; Fullwidth=$fw}
+                                }
+                            }
                         }
                     }
-                    foreach ($fw in $FullwidthPatterns) {
-                        if ($content.Contains($fw)) {
-                            $hits.Add("FULLWIDTH:$fw")
-                        }
-                    }
-                }
-            }
-        }
-        $zip.Dispose()
-    } catch {
-        # Non-zip or locked JAR – fall back to simple string search on the file itself
-        if (Test-StringInFile -Path $JarPath -Needles $ClientBrandStrings -BinarySafe) {
-            $hits.Add("BRAND:raw-file-match")
-        }
-    }
-    return $hits | Sort-Object -Unique
-}
-
-# ---------------------------------------------------------------------------
-# 4. SCAN PHASES
-# ---------------------------------------------------------------------------
-
-Write-Host "[*] Minecraft Cheat Client Forensic Scanner v$ScriptVersion" -ForegroundColor Cyan
-Write-Host "[*] Output directory: $OutputDir" -ForegroundColor Cyan
-New-Item -ItemType Directory -Path $OutputDir -Force | Out-Null
-
-# 4.1 Running processes & command lines
-Write-Host "[*] Scanning running processes..." -ForegroundColor Yellow
-Get-CimInstance Win32_Process -ErrorAction SilentlyContinue | ForEach-Object {
-    $cmd = $_.CommandLine
-    if (-not $cmd) { return }
-    $procName = $_.Name
-    $pid = $_.ProcessId
-
-    foreach ($arg in $JvmCheatArgs) {
-        if ($cmd -match [regex]::Escape($arg)) {
-            Add-Finding -Severity 'CRITICAL' -Category 'Process' -Indicator "JVM cheat argument" `
-                -Location "PID $pid ($procName)" -Evidence $cmd.Substring(0,[Math]::Min(400,$cmd.Length)) `
-                -Confidence 'High'
-        }
-    }
-    foreach ($brand in $ClientBrandStrings) {
-        if ($cmd -match [regex]::Escape($brand)) {
-            Add-Finding -Severity 'HIGH' -Category 'Process' -Indicator "Client brand in command line" `
-                -Location "PID $pid ($procName)" -Evidence $brand -Confidence 'High'
-        }
-    }
-}
-
-# 4.2 DNS cache
-if (-not $SkipDns) {
-    Write-Host "[*] Checking DNS cache for cheat domains..." -ForegroundColor Yellow
-    try {
-        $dns = Get-DnsClientCache -ErrorAction SilentlyContinue
-        foreach ($entry in $dns) {
-            $name = $entry.Entry
-            foreach ($dom in $CheatDomains) {
-                if ($name -like "*$dom*") {
-                    Add-Finding -Severity 'HIGH' -Category 'Network' -Indicator "Cheat domain in DNS cache" `
-                        -Location $name -Evidence "Type=$($entry.Type) Status=$($entry.Status)" `
-                        -Confidence 'High'
-                }
-            }
-        }
-    } catch {
-        # Fallback for older systems
-        $raw = ipconfig /displaydns 2>$null | Out-String
-        foreach ($dom in $CheatDomains) {
-            if ($raw -match [regex]::Escape($dom)) {
-                Add-Finding -Severity 'HIGH' -Category 'Network' -Indicator "Cheat domain in DNS cache (legacy)" `
-                    -Location $dom -Evidence "Found via ipconfig /displaydns" -Confidence 'Medium'
-            }
-        }
-    }
-}
-
-# 4.3 Minecraft directory tree
-Write-Host "[*] Discovering Minecraft roots..." -ForegroundColor Yellow
-$mcRoots = Get-MinecraftRoots
-Write-Host "[*] Found $($mcRoots.Count) potential Minecraft roots" -ForegroundColor Green
-
-foreach ($root in $mcRoots) {
-    Write-Host "    Scanning: $root" -ForegroundColor DarkGray
-
-    # mods folder + versions + .minecraft root
-    $searchPaths = @(
-        (Join-Path $root 'mods'),
-        (Join-Path $root 'versions'),
-        (Join-Path $root 'libraries'),
-        $root
-    ) | Where-Object { Test-Path $_ }
-
-    foreach ($sp in $searchPaths) {
-        Get-ChildItem -Path $sp -Recurse -Include *.jar,*.zip,*.dll,*.so,*.json,*.txt,*.cfg,*.properties `
-            -ErrorAction SilentlyContinue | ForEach-Object {
-            $file = $_
-            $rel  = $file.FullName.Substring($root.Length).TrimStart('\')
-
-            # Quick name-based detection
-            $nameLower = $file.Name.ToLowerInvariant()
-            foreach ($brand in $ClientBrandStrings) {
-                if ($nameLower -like "*$($brand.ToLowerInvariant())*") {
-                    Add-Finding -Severity 'HIGH' -Category 'Filesystem' -Indicator "Cheat client name in filename" `
-                        -Location $file.FullName -Evidence $file.Name -Confidence 'High'
-                }
-            }
-
-            # Deep content scan for JARs
-            if ($file.Extension -in '.jar','.zip') {
-                $hits = Search-JarForSignatures -JarPath $file.FullName
-                foreach ($h in $hits) {
-                    $sev = 'MEDIUM'
-                    $conf = 'Medium'
-                    if ($h -like 'PACKAGE:*' -or $h -like 'FULLWIDTH:*') {
-                        $sev = 'CRITICAL'; $conf = 'High'
-                    } elseif ($h -like 'BRAND:*') {
-                        $sev = 'HIGH'; $conf = 'High'
-                    } elseif ($h -like 'MODULE:*') {
-                        $sev = 'MEDIUM'; $conf = 'Medium'
-                    }
-                    Add-Finding -Severity $sev -Category 'JAR Content' -Indicator $h `
-                        -Location $file.FullName -Evidence $h -Confidence $conf
+                    Write-Progress -Activity "Scanning JARs" -Completed
                 }
             } else {
-                # Non-JAR text-ish files
-                if (Test-StringInFile -Path $file.FullName -Needles $ClientBrandStrings) {
-                    Add-Finding -Severity 'MEDIUM' -Category 'Filesystem' -Indicator "Client brand string in file" `
-                        -Location $file.FullName -Evidence "Matched client brand" -Confidence 'Medium'
+                Write-Host "Path not found: $path" -ForegroundColor Red
+            }
+            Read-Host "Press Enter to continue"
+        }
+        "2" {
+            Scan-System
+            Read-Host "Press Enter to continue"
+        }
+        "3" {
+            Export-Report
+            Read-Host "Press Enter to continue"
+        }
+        "4" {
+            if ($script:Findings.Count -eq 0) {
+                Write-Host "No findings." -ForegroundColor Yellow
+            } else {
+                Write-Host "`n--- Findings ($($script:Findings.Count)) ---" -ForegroundColor Cyan
+                foreach ($f in $script:Findings) {
+                    $color = switch ($f.Tier) {
+                        "Detection" { "Red" }
+                        "Warning"   { "Yellow" }
+                        default     { "Gray" }
+                    }
+                    Write-Host "[$($f.Tier)] $($f.Title)" -ForegroundColor $color
+                    Write-Host "  $($f.Message)" -ForegroundColor White
                 }
-                if (Test-StringInFile -Path $file.FullName -Needles $ExactModules) {
-                    Add-Finding -Severity 'LOW' -Category 'Filesystem' -Indicator "Exact module name in file" `
-                        -Location $file.FullName -Evidence "Matched module name" -Confidence 'Low'
-                }
+                Write-Host ""
             }
+            Read-Host "Press Enter to continue"
+        }
+        "5" {
+            $script:Findings = @()
+            Write-Host "Findings cleared." -ForegroundColor Green
+            Read-Host "Press Enter to continue"
+        }
+        "6" {
+            Write-Host "Exiting." -ForegroundColor Cyan
+            exit
+        }
+        default {
+            Write-Host "Invalid choice." -ForegroundColor Red
+            Read-Host "Press Enter to continue"
         }
     }
-}
-
-# 4.4 Prefetch (cheat launcher indicators)
-Write-Host "[*] Checking Prefetch for launcher activity..." -ForegroundColor Yellow
-$prefetch = "$env:SystemRoot\Prefetch"
-if (Test-Path $prefetch) {
-    Get-ChildItem $prefetch -Filter *.pf -ErrorAction SilentlyContinue | ForEach-Object {
-        $n = $_.Name.ToLowerInvariant()
-        foreach ($brand in $ClientBrandStrings) {
-            if ($n -like "*$($brand.ToLowerInvariant())*") {
-                Add-Finding -Severity 'MEDIUM' -Category 'Prefetch' -Indicator "Cheat-related Prefetch entry" `
-                    -Location $_.FullName -Evidence $_.Name -Confidence 'Medium'
-            }
-        }
-    }
-}
-
-# 4.5 Recent / Jump Lists / Temp
-Write-Host "[*] Scanning recent files and temp locations..." -ForegroundColor Yellow
-$extraLocs = @(
-    "$env:APPDATA\Microsoft\Windows\Recent",
-    "$env:LOCALAPPDATA\Temp",
-    "$env:TEMP",
-    "$env:USERPROFILE\Downloads"
-)
-foreach ($loc in $extraLocs) {
-    if (-not (Test-Path $loc)) { continue }
-    Get-ChildItem $loc -Recurse -Depth 2 -Include *.jar,*.exe,*.lnk,*.bat,*.ps1 -ErrorAction SilentlyContinue |
-        ForEach-Object {
-            $n = $_.Name.ToLowerInvariant()
-            foreach ($brand in $ClientBrandStrings) {
-                if ($n -like "*$($brand.ToLowerInvariant())*") {
-                    Add-Finding -Severity 'MEDIUM' -Category 'Recent/Temp' -Indicator "Cheat artifact in recent/temp" `
-                        -Location $_.FullName -Evidence $_.Name -Confidence 'Medium'
-                }
-            }
-        }
-}
-
-# ---------------------------------------------------------------------------
-# 5. REPORT GENERATION
-# ---------------------------------------------------------------------------
-
-$ScanEnd = Get-Date
-$Duration = ($ScanEnd - $ScanStart).TotalSeconds
-
-# Severity counts
-$crit = ($Findings | Where-Object Severity -eq 'CRITICAL').Count
-$high = ($Findings | Where-Object Severity -eq 'HIGH').Count
-$med  = ($Findings | Where-Object Severity -eq 'MEDIUM').Count
-$low  = ($Findings | Where-Object Severity -eq 'LOW').Count
-
-# Human-readable summary
-$summaryPath = Join-Path $OutputDir 'CheatScan_Report.txt'
-$sb = [System.Text.StringBuilder]::new()
-[void]$sb.AppendLine("=" * 80)
-[void]$sb.AppendLine("MINECRAFT CHEAT CLIENT FORENSIC SCANNER – REPORT")
-[void]$sb.AppendLine("Version      : $ScriptVersion")
-[void]$sb.AppendLine("Scan start   : $($ScanStart.ToString('o'))")
-[void]$sb.AppendLine("Scan end     : $($ScanEnd.ToString('o'))")
-[void]$sb.AppendLine("Duration     : $([math]::Round($Duration,1)) seconds")
-[void]$sb.AppendLine("Host         : $env:COMPUTERNAME")
-[void]$sb.AppendLine("User         : $env:USERNAME")
-[void]$sb.AppendLine("=" * 80)
-[void]$sb.AppendLine("")
-[void]$sb.AppendLine("SEVERITY SUMMARY")
-[void]$sb.AppendLine("  CRITICAL : $crit")
-[void]$sb.AppendLine("  HIGH     : $high")
-[void]$sb.AppendLine("  MEDIUM   : $med")
-[void]$sb.AppendLine("  LOW      : $low")
-[void]$sb.AppendLine("  TOTAL    : $($Findings.Count)")
-[void]$sb.AppendLine("")
-
-if ($Findings.Count -eq 0) {
-    [void]$sb.AppendLine("NO CHEAT INDICATORS FOUND.")
-    [void]$sb.AppendLine("All signatures used are exclusive to known cheat clients and do not appear in legitimate mods.")
-} else {
-    [void]$sb.AppendLine("DETAILED FINDINGS (sorted by severity)")
-    [void]$sb.AppendLine("-" * 80)
-    $ordered = $Findings | Sort-Object @{
-        Expression = {
-            switch ($_.Severity) {
-                'CRITICAL' { 0 }
-                'HIGH'     { 1 }
-                'MEDIUM'   { 2 }
-                'LOW'      { 3 }
-                default    { 4 }
-            }
-        }
-    }, Category, Indicator
-
-    foreach ($f in $ordered) {
-        [void]$sb.AppendLine("[$($f.Severity)] $($f.Category) – $($f.Indicator)")
-        [void]$sb.AppendLine("  Location   : $($f.Location)")
-        [void]$sb.AppendLine("  Evidence   : $($f.Evidence)")
-        [void]$sb.AppendLine("  Confidence : $($f.Confidence)")
-        [void]$sb.AppendLine("")
-    }
-}
-
-[void]$sb.AppendLine("=" * 80)
-[void]$sb.AppendLine("END OF REPORT")
-$sb.ToString() | Out-File -FilePath $summaryPath -Encoding UTF8
-
-# Structured JSON
-$jsonPath = Join-Path $OutputDir 'CheatScan_Report.json'
-$reportObj = [ordered]@{
-    scannerVersion = $ScriptVersion
-    scanStart      = $ScanStart.ToString('o')
-    scanEnd        = $ScanEnd.ToString('o')
-    durationSeconds = [math]::Round($Duration,2)
-    host           = $env:COMPUTERNAME
-    user           = $env:USERNAME
-    summary        = @{
-        critical = $crit
-        high     = $high
-        medium   = $med
-        low      = $low
-        total    = $Findings.Count
-    }
-    findings       = $Findings
-}
-$reportObj | ConvertTo-Json -Depth 6 | Out-File -FilePath $jsonPath -Encoding UTF8
-
-# Console summary
-if (-not $Quiet) {
-    Write-Host ""
-    Write-Host "========== SCAN COMPLETE ==========" -ForegroundColor Cyan
-    Write-Host "CRITICAL : $crit" -ForegroundColor $(if($crit){'Red'}else{'Green'})
-    Write-Host "HIGH     : $high" -ForegroundColor $(if($high){'Red'}else{'Green'})
-    Write-Host "MEDIUM   : $med"  -ForegroundColor $(if($med){'Yellow'}else{'Green'})
-    Write-Host "LOW      : $low"  -ForegroundColor $(if($low){'Yellow'}else{'Green'})
-    Write-Host "TOTAL    : $($Findings.Count)"
-    Write-Host ""
-    Write-Host "Human-readable report : $summaryPath"
-    Write-Host "JSON report           : $jsonPath"
-    Write-Host "===================================" -ForegroundColor Cyan
-}
-
-# Return findings for pipeline use
-return $Findings
+} while ($true)
+#endregion
